# captura_downloads

./: .gitignore  A-Simple-Google-Search.ps1  CHANGELOG.md  Program.cs  README.md  captura_downloads.csproj  captura_downloads.sln  cria_pasta_diaria.ps1  dependencias.ps1  download_files.ps1  download_files.py  download_files_kyd.py  download_files_selenium.py  env.example  example.py  hello.py  main.py  mkdocs.yml  parser.py  processor.py  pyproject.toml  resources.yaml  resources_python.yaml  run_sqlcmd.ps1
.devcontainer/: devcontainer.json
.github/workflows/: python-app.yml
captura_downloads/etls/anbima/: ima_composicao_carteira.py  ima_totais.py  mercado_secundario_debentures.py  mercado_secundario_titulos_publicos.py  utils.py
captura_downloads/etls/b3/: capital_social_empresas.py  carteiras_teoricas.py  instrumentos_listados.py  utils.py
captura_downloads/notebooks/: anbima_ima_composicao_carteira.ipynb  anbima_ima_totais.ipynb  anbima_mercado_secundario_debentures.ipynb  utils.py
docs/: index.md
downloads_bulk/: 20250212_anbima_ima_completo.txt  20250212_anbima_indicadores.xls  20250212_anbima_mercado_secundario_debentures.txt  20250212_anbima_mercado_secundario_titulos_publicos.txt  20250212_b3_carteira_teorica_agfs_iagro.csv.base64  20250212_b3_carteira_teorica_bdrx.csv.base64  20250212_b3_carteira_teorica_ibov.csv.base64  20250212_b3_carteira_teorica_ibsd.csv.base64  20250212_b3_carteira_teorica_ibxl.csv.base64  20250212_b3_carteira_teorica_ifnc.csv.base64  20250212_b3_carteira_teorica_isee.csv.base64  20250212_b3_carteira_teorica_smll.csv.base64  20250212_b3_etfs_listados.csv.base64  20250212_b3_indicadores_financeiros.json  20250212_b3_taxa_cambio_referencia.json  20250212_b3_token.json  20250212_debentures_mercado_secundario_precos_negociacao.csv
kyd/: mail.py  setup.py  test_kyd.py  test_parsers.py
kyd/data/: downloaders.py  logs.py
kyd/parsers/: __init__.py  anbima.py  b3.py  cvm.py
kyd_downloader/: .gitignore  README.md  pyproject.toml
kyd_downloader/app/: ds.py  main.py  requirements.txt
kyd_downloader/app/static/: style.css
kyd_downloader/app/templates/: base.html  download-log-table.html  download-log.html  historical-download-log.html  historical-processor-log.html  processor-log-calendar-check.html  processor-log.html
kyd_downloader/config/: anbima-index-imab.json  anbima-index-imab5.json  anbima-index-imab5mais.json  anbima-index-imab5p2.json  anbima-index-imageral.json  anbima-index-imageralexc.json  anbima-index-imas.json  anbima-index-irfm.json  anbima-index-irfm1.json  anbima-index-irfm1mais.json  anbima-index-irfmp2.json  b3-companies-options.json  b3-cotahist-daily.json  b3-otc-instruments-consolidated.json  b3-otc-trade-information-consolidated.json  b3-settlement-prices.json  cdi.json  companies_marketvalue_monthly.json  cotahist.json  cvm_fundos_informe_diario_0.json  cvm_fundos_informe_diario_1.json  cvm_fundos_informe_diario_10.json  cvm_fundos_informe_diario_11.json  cvm_fundos_informe_diario_2.json  cvm_fundos_informe_diario_3.json  cvm_fundos_informe_diario_4.json  cvm_fundos_informe_diario_5.json  cvm_fundos_informe_diario_6.json  cvm_fundos_informe_diario_7.json  cvm_fundos_informe_diario_8.json  cvm_fundos_informe_diario_9.json  td_lft.json  td_ltn.json  td_ntnb.json  td_ntnb_principal.json  td_ntnc.json  td_ntnf.json
kyd_downloader/functions/: deploy.ps1  main.py  manual_download.py  requirements.txt
kyd_downloader/kyd/: mail.py
kyd_downloader/kyd-run/: build.ps1  call_file_process.py  call_process_bvbg028.py  correct_invalid_files2.py  deploy.ps1  main.py  parsers.py  reprocess_file_processor.py  requirements.txt  test.py  test_parsers_3.py
kyd_downloader/kyd/data/: downloaders.py  logs.py
kyd_downloader/storage/: Read_XLSB.ipynb  Untitled-1.ipynb  adjust_prices.ipynb  airflow.ps1  b3-and-anbima-scrapers-developments.ipynb  b3-changes-in-symbols.ipynb  b3-check-pesquisa-pregao-download.ipynb  bizdays.ipynb  bq_b3_adjust_prices.py  bq_b3_equity_options_prices.py  bq_b3_equity_prices.py  bq_b3_futures.py  bq_load_anbima_data.py  bq_load_b3_data.py  check_BDIN.py  check_anbima_titpub.py  check_bvbg028.py  check_bvbg086.py  check_files.py  check_missing_dates.py  check_parquet.py  create_calendar_table.py  create_tables.ps1  download.sh  getdata.ipynb  getdata2.ipynb  kyd-check-file-on-storage.ipynb  load_b3_data_to_bq.py  load_bq.ps1  no_test_anbima_tpf.py  no_test_bq.py  no_test_pandas_bq.py  no_test_parse_vna_anbima.py  parquet-loader.py  process_anbima_debentures_xlsb.py  process_anbima_tpf.py  process_anbima_tpf_xlsb.py  process_anbima_vnatpf.py  process_b3_stockindexinfo.py  process_bvbg028.py  (+10 more)
kyd_downloader/tests/: test_anbima.py  test_cvm.py  test_download.py  test_download_fundos_inf_diario.py  test_get_month.py
notebooks/: anbima_ima_composicao_carteira.ipynb  utils.py
sql/: create_tables.sql
tests/: import unittest.py  test_bizdays.py
