[project]
name = "captura-downloads"
version = "0.1.0"
description = ""
authors = [
    {name = "Rodrigo Prado de Jesus",email = "royopa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "requests-html (>=0.10.0,<0.11.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "selenium (>=4.28.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
blue = "^0.9.1"
isort = "^6.0.0"
taskipy = "^1.14.1"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.6.3"
mkdocstrings = "^0.28.0"
mkdocstrings-python = "^1.14.6"

[tool.isort]
profile = "black"
src_paths = [".", "captura_downloads", "test"]
honor_noqa = true
line_length = 79

[tool.pytest.ini_options]
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
minversion = "6.2"
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
    "--doctest-modules",
]

[tool.taskipy.tasks]
pre_test = "task lint"
test = "pytest -s -x -vv"
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"