[project]
name = "captura-downloads"
version = "0.1.0"
description = ""
authors = [
    {name = "Rodrigo Prado de Jesus",email = "royopa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "requests-html (>=0.10.0,<0.11.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "selenium (>=4.28.1,<5.0.0)",
    "pendulum (>=3.0.0,<4.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "bizdays (>=1.0.16,<2.0.0)",
    "splinter (>=0.21.0,<0.22.0)",
    "lxml (>=5.3.1,<6.0.0)",
    "regexparser (>=0.1.0,<0.2.0)",
    "google-cloud-datastore (>=2.20.2,<3.0.0)",
    "selene (>=1.0.2,<2.0.0)",
    "fire (>=0.7.0,<0.8.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pyodbc (>=5.2.0,<6.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "termcolor (>=2.5.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
isort = "^6.0.0"
taskipy = "^1.14.1"
ruff = "^0.9.5"
blue = "^0.9.1"
pytest-selenium = "^4.1.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.6.3"
mkdocstrings = "^0.28.0"
mkdocstrings-python = "^1.14.6"

[tool.isort]
profile = "black"
src_paths = [".", "captura_downloads", "test"]
honor_noqa = true
line_length = 79

[tool.pytest.ini_options]
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
minversion = "6.2"
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
    "--doctest-modules",
]

[tool.taskipy.tasks]
pre_test = "blue . && isort . && ruff format ."
test = "pytest -s -x -vv"
lint = "blue . && isort ."
docs = "mkdocs serve"
ruff = "ruff format ."
start = "poetry run python main.py all"
processor = "poetry run python processor.py"